--- a/templates/header.html
+++ b/templates/header.html
@@ -7,18 +7,20 @@
     <meta name="author" content=""/>
     <title>Quest Log</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="../static/assets/favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/favicon.ico') }}"/>
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../static/css/styles.css" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
 </head>
 <body>
 <!-- Responsive navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-5">
 
-        <a class="navbar-brand" href="{{ url_for('index') }}">Quest Log</a>
+        <a class="navbar-brand mx-auto questlog-title" href="{{ url_for('index') }}">
+            Quest Log
+        </a>
         {% if current_user.is_authenticated %}
         <li class="nav-item d-flex align-items-center">
 
