--- a/templates/quest_log.html
+++ b/templates/quest_log.html
@@ -22,6 +22,10 @@
                             <button type="submit" class="btn btn-success w-100">
                                 Turn In Quest
                             </button>
+                            <form action="{{ url_for('remove', todo_id=todo.id) }}" method="POST">
+                            <button type="submit" class="btn btn-success w-100">
+                                Remove Quest
+                            </button>
                         </form>
                     </div>
                 </div>
