--- a/templates/profile.html
+++ b/templates/profile.html
@@ -58,6 +58,9 @@
                                 </div>
 
                                 {% if not todo.completed %}
+                                <form action="{{ url_for('remove', todo_id=todo.id) }}" method="POST">
+                                    <button type="submit" class="btn btn-danger w-100">Remove</button>
+                                </form>
                                 <form action="{{ url_for('turn_in', todo_id=todo.id) }}" method="POST">
                                     <button class="btn btn-sm btn-success">Turn In</button>
                                 </form>
