fix typo in html

--- a/templates/quest_log.html
+++ b/templates/quest_log.html
@@ -11,7 +11,7 @@
                     <option value="date">Newest</option>
 
                     <option value="title">Title</option>
-                    <option value="title">xp</option>
+                    <option value="xp">xp</option>
                 </select>
 
                 <select name="category" class="form-select">
