fix values for categories leading to incorrect routes

--- a/templates/quest_log.html
+++ b/templates/quest_log.html
@@ -18,11 +18,11 @@
                     <option value="">All Categories</option>
                     <option value="main">Main</option>
                     <option value="side">Side</option>
-                    <option value="side">Daily</option>
-                    <option value="side">Errand</option>
-                    <option value="side">Work</option>
-                    <option value="side">Personal</option>
-                    <option value="side">Other</option>
+                    <option value="daily">Daily</option>
+                    <option value="errand">Errand</option>
+                    <option value="work">Work</option>
+                    <option value="personal">Personal</option>
+                    <option value="other">Other</option>
 
                 </select>
 
